Added Process class

--- a/oloJector2/oloJector2.vcxproj
+++ b/oloJector2/oloJector2.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dllManager.cpp" />
+    <ClCompile Include="DllManager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Process.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="dllManager.h" />
+    <ClInclude Include="DllManager.h" />
+    <ClInclude Include="Process.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
